# red_hat_SRE_challenge

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
config/: __init__.py  config.yml
k8s/: Dockerfile  job.yaml
red_hat/: __init__.py  client.py  parsers.py  services.py  utils.py
tests/: conftest.py  test_parsers.py  test_services.py  test_utils.py
